<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginUI.LoginFragment"
    android:id="@+id/login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="70dp" />-->


        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hello"
            android:padding="24dp"
            android:textSize="48sp"
            android:layout_gravity="center" />


        <TextView
            android:id="@+id/tvSignInAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="24dp"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:hint="@string/e_mail"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_email"
            android:background="@drawable/edittext_registration_screen"
            android:elevation="16dp"
            android:padding="12dp"
            android:layout_margin="12dp"

            />
<!--            android:labelFor="@id/etLoginEmail"-->
<!--            android:imeActionLabel="@string/e_mail"-->


        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_eye"
            android:background="@drawable/edittext_registration_screen"
            android:elevation="16dp"
            android:padding="12dp"
            android:layout_margin="12dp"/>
<!--            android:labelFor="@id/etLoginPassword"-->
<!--            android:imeActionLabel="@string/password"-->



        <TextView
            android:id="@+id/tvForgotYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/forgot_your_password"
            android:padding="24dp"
            android:layout_gravity="end"/>
<!--            android:labelFor="@id/tvForgotYourPassword"-->
<!--            android:imeActionLabel="@string/forgot_your_password"-->
<!--            tools:ignore="TextViewEdits" />-->


            <TextView
                android:id="@+id/tvSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:padding="24dp" />
<!--                android:labelFor="@+id/tvSignin"-->
<!--                android:imeActionLabel="@string/sign_in"-->
<!--                tools:ignore="TextViewEdits" -->

<!--            <ImageButton-->
<!--                android:id="@+id/ivForwardArrow"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/ic_arrow_forward"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:padding="8dp"-->
<!--                android:background="@drawable/bg_arrow_shape"-->
<!--                android:contentDescription="@string/forward_arrow"-->
<!--                />-->



        <TextView
            android:id="@+id/tvDontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/don_t_have_an_account_create"
            android:layout_gravity="center"

            android:padding="24dp"
            android:textSize="20sp"/>
<!--            android:labelFor="@+id/tvDontHaveAnAccount"-->
<!--            android:imeActionLabel="@string/don_t_have_an_account_create"-->


    <TextView
        android:id="@+id/tvSuccessFailure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:textSize="22sp"
        android:text="@string/hello"
        android:padding="24dp"
        android:visibility="visible"
        />


    </LinearLayout>
</ScrollView>