<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    tools:context=".RegistartionUI.RegistrationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:id="@+id/registration"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/ivBackArrowRegistrationScreen"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/bg_arrow_shape"
            android:contentDescription="@string/go_to_login_screen"/>


        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="24dp"
            />

        <EditText
            android:id="@+id/etRegisterUserName"
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_height="48dp"
            android:drawableStart="@drawable/ic_username"
            android:background="@drawable/edittext_registration_screen"
            android:layout_margin="14dp"
            android:elevation="16dp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:hint="@string/e_mail"
            android:drawableLeft="@drawable/ic_email"
            android:layout_height="48dp"
            android:background="@drawable/edittext_registration_screen"
            android:layout_margin="14dp"
            android:elevation="16dp"
            android:paddingLeft="16dp"

            />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="48dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_eye"
            android:background="@drawable/edittext_registration_screen"
            android:layout_margin="14dp"
            android:elevation="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            />

        <EditText
            android:id="@+id/etRegisterPhone"
            android:layout_width="match_parent"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:hint="@string/phone_number"
            android:layout_height="48dp"
            android:drawableStart="@drawable/ic_phone"
            android:background="@drawable/edittext_registration_screen"
            android:layout_margin="14dp"
            android:elevation="16dp"
            android:paddingStart="16dp"

            tools:ignore="RtlSymmetry" />



            <TextView
                android:id="@+id/tvCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_gravity="right"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="24dp"
                android:clickable="true" />

        <TextView
            android:id="@+id/tvCreateAccountWithSocials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/or_create_account_using_social_media"
            android:layout_gravity="center"
            android:padding="24dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google"
                android:layout_weight="1"
                android:elevation="5dp" />

            <ImageView
                android:id="@+id/ivTwitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_twitter"
                android:layout_weight="1"
                android:elevation="5dp"

                />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_facebook"
                android:layout_weight="1"
                android:elevation="5dp"
                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>