<resources>
    <string name="app_name">Room Database Implementation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="username"> Username</string>
    <string name="create">Create</string>
    <string name="e_mail"> E-mail</string>
    <string name="password"> Password</string>
    <string name="phone_number"> Phone Number</string>
    <string name="don_t_have_an_account_create">Don\'t have an account? <u><b>Create</b></u></string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="hello">Hello</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="or_create_account_using_social_media">or create account using social media</string>
    <string name="failure">Failure</string>
    <string name="success">Success</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="go_to_login_screen">Go to Login Screen</string>
</resources>